--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 canvas {
   position: absolute;
+  /* background: radial-gradient(ellipse at center,  rgba(43,45,48,1) 0%,rgba(0,0,0,1) 100%); */
   width: 100%;
   height: 100%;
   top: 0;
