--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   /* margin: 10px; */
   overflow: hidden;
   background-color: #ffffff;
-
+font-family: 'Montserrat', sans-serif;
 }
 canvas {
   position: absolute;
@@ -30,7 +30,6 @@ canvas {
     top: 10px;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    font-family: Arial;
     padding: 1em;
     border-radius: 0.25em;
     border: 2px solid #FAFAD2;
@@ -128,7 +127,7 @@ canvas {
 }
 .content {
   color:black;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
 }
 #center {
   text-align: center;
