--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ canvas {
     position: absolute;
     text-align: center;
     font-size: 1.4vmax;
-    left: 10px;
-    top: 10px;
+    left: 0.2vmax;
+    bottom: 0.2vmax;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    padding: 1em;
+    padding: 0.4vmax;
     border-radius: 0.25em;
     border: 2px solid #FAFAD2;
     /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
