--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   /* margin: 10px; */
   overflow: hidden;
   background-color: #ffffff;
-font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 canvas {
   position: absolute;
@@ -13,6 +13,58 @@ canvas {
   top: 0;
   left: 0;
 }
+.header {
+  cursor: default;
+  position: absolute;
+  text-align: justify ;
+  font-size: 15px;
+  left: 0.0vmax;
+  top: 0.0vmax;
+  background-color: rgba(1,158,229,.8);
+  color: white;
+  padding: 0.0vmax;
+  /* border-radius: 0.25em; */
+  /* border: 1px solid #FAFAD2; */
+  /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
+  /* height: 4.0vmax; */
+  width: 100%;
+  /* height: 40px; */
+}
+.header div {
+  display: inline-block;
+}
+.header p {
+    margin: 0;
+}
+#header1 {
+  text-align: center ;
+  padding: 5px;
+  font-size: 30px;
+  margin: 0;
+}
+#header2 {
+  float: right;
+  right: 5px;
+  padding: 5px;
+  font-size: 20px;
+  margin: 0;
+}
+.textblock1 {
+  cursor: default;
+  position: absolute;
+  text-align: justify ;
+  font-size: 15px;
+  left: 0.2vmax;
+  top: 95px;
+  background-color: rgba(186, 23, 14, 0.7);
+  color: white;
+  padding: 0.4vmax;
+  /* border-radius: 0.25em; */
+  /* border: 1px solid #FAFAD2; */
+  /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
+  /* height: 4.0vmax; */
+  width: 30.0vmax;
+}
 #canvas-exemple {
   position: relative;
         margin: 0;
@@ -21,11 +73,11 @@ canvas {
   background-color: #ffffff;
   position: relative;
 }
-#overlay {
+.overlay {
   cursor: default;
     position: absolute;
     text-align: center;
-    font-size: 1.4vmax;
+    font-size: 1.2vmax;
     left: 0.2vmax;
     bottom: 0.2vmax;
     background-color: rgba(0, 0, 0, 0.7);
@@ -57,6 +109,30 @@ canvas {
   bottom: 0.2vmax;
   background-color: #ffc355;
 }
+#btnhide {
+  bottom: 10px;
+  left:  50%;
+  /* background-color: #aaaaaa; */
+  opacity: 0.5;
+  background-image: url(../images/eyehide.png);
+  background-repeat     : no-repeat;
+  background-size       : cover;
+  background-position-x : 50%;
+  background-position-y : 50%;
+  /* display: none; */
+}
+#btnbrony {
+  bottom: 10px;
+  right:  50%;
+  /* background-color: #aaaaaa; */
+  opacity: 0.5;
+  background-image: url(../images/bronya.png);
+  background-repeat     : no-repeat;
+  background-size       : cover;
+  background-position-x : 50%;
+  background-position-y : 50%;
+  /* display: none; */
+}
 #btnfullscrn {
   bottom: 10px;
   right: 1vmax;
@@ -67,6 +143,7 @@ canvas {
   background-size       : cover;
   background-position-x : 50%;
   background-position-y : 50%;
+  display: none;
 }
 #rotateObj {
   bottom: 10px;
@@ -78,6 +155,7 @@ canvas {
   background-size       : cover;
   background-position-x : 50%;
   background-position-y : 50%;
+    display: none;
 }
 #cameraReset {
   bottom: 10px;
@@ -89,13 +167,14 @@ canvas {
   background-size       : cover;
   background-position-x : 50%;
   background-position-y : 50%;
+    display: none;
 }
 #btnPlay {
   bottom: 10px;
   right: 20.0vmax;
-  background-color: #aaaaaa;
+  /* background-color: #aaaaaa; */
   /* opacity: 0.36; */
-  background-image: url(../images/white-play-512.png);
+  background-image: url(../images/info_icon.png);
   background-repeat     : no-repeat;
   background-size       : cover;
   background-position-x : 50%;
@@ -106,7 +185,7 @@ canvas {
 #loading {
   color:green;
   position: absolute;
-  top: 50%;
+  top: 50vmin;
   left: 34vmax;
   height: 37px;
   width: 31vmax;
