--- a/css/style.css
+++ b/css/style.css
@@ -73,139 +73,51 @@ canvas {
   width: 30.0vmax;
   display: none;
 }
+.testtt {
+  cursor: default;
+  position: absolute;
+  text-align: right ;
+  font-size: 2.2vmax;
+  right: 55%;
+  top: 30%;
+  background-color: #BF360C;
+  color: white;
+  padding: 0.4vmax;
+  /* border-radius: 0.25em; */
+  /* border: 1px solid #FAFAD2; */
+  /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
+  /* height: 4.0vmax; */
+  width: 35.0vmax;
+  display: none;
+}
 
 #canvas-exemple {
   position: relative;
-        margin: 0;
-    }
+  margin: 0;
+}
 .container {
   background-color: #ffffff;
   position: relative;
 }
 .overlay {
   cursor: default;
-    position: absolute;
-    text-align: center;
-    font-size: 1.2vmax;
-    left: 0.2vmax;
-    bottom: 0.2vmax;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 0.4vmax;
-    border-radius: 0.25em;
-    border: 2px solid #FAFAD2;
-    /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
-}
-.colorpicker1 {
-  margin: 0.1vmax;
-  cursor: pointer;
   position: absolute;
-  height: 4.0vmax;
-  width: 4.0vmax;
-  /* color: white; */
-  /* font-family: monospace; */
-  /* padding: 1em; */
-  /* border-radius: 0.6em; */
-  /* border: 2px solid #FAFAD2; */
-}
-#overlaySteel {
-  right: 50%;
+  text-align: center;
+  font-size: 1.2vmax;
+  left: 0.2vmax;
   bottom: 0.2vmax;
-  background-color: #28343b;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 0.4vmax;
+  border-radius: 0.25em;
+  border: 2px solid #FAFAD2;
+  /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
 }
-#overlayGold {
-  left: 50%;
-  bottom: 0.2vmax;
-  background-color: #ffc355;
-}
-#btnhide {
-  bottom: 10px;
-  left:  50%;
-  /* background-color: #aaaaaa; */
-  opacity: 0.5;
-  background-image: url(../images/eyehide.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-  /* display: none; */
-}
-#btnbrony {
-  bottom: 10px;
-  right:  50%;
-  /* background-color: #aaaaaa; */
-  opacity: 0.5;
-  background-image: url(../images/bronya.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-  /* display: none; */
-}
-#btnfullscrn {
-  bottom: 10px;
-  right: 1vmax;
-  /* background-color: #aaaaaa; */
-  opacity: 0.5;
-  background-image: url(../images/fullScrn.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-  display: none;
-}
-#rotateObj {
-  bottom: 10px;
-  right: 5.5vmax;
-  /* background-color: #000000; */
-  opacity: 0.36;
-  background-image: url(../images/rotation.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-    display: none;
-}
-#cameraReset {
-  bottom: 10px;
-  right: 10.0vmax;
-  /* background-color: #000000; */
-  opacity: 0.36;
-  background-image: url(../images/videocam-outline.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-    display: none;
-}
-#btnPlay {
-  bottom: 10px;
-  right: 20.0vmax;
-  /* background-color: #aaaaaa; */
-  /* opacity: 0.36; */
-  background-image: url(../images/info_icon.png);
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-  display: none;
-}
-#btnTemp {
-  bottom: 10px;
-  right: 25.0vmax;
-  background-color: #ff0000;
-  /* opacity: 0.36; */
-  /* background-image: url(../images/info_icon.png); */
-  background-repeat     : no-repeat;
-  background-size       : cover;
-  background-position-x : 50%;
-  background-position-y : 50%;
-  /* display: none; */
-}
+
 #loading {
   color:green;
   position: absolute;
-  top: 50vmin;
+  top: 40vmin;
   left: 34vmax;
   height: 37px;
   width: 31vmax;
