--- a/css/style.css
+++ b/css/style.css
@@ -118,20 +118,21 @@ canvas {
   color:green;
   position: absolute;
   top: 40vmin;
-  left: 34vmax;
+  /* left: 25vmax; */
   height: 37px;
-  width: 31vmax;
+  width: 100%;
 }
 #blockloading {
   position: absolute;
+  left: 25vmax;
   border: 1px solid #000000;
-  height: 14px;
-  width: 30.25vmax;
+  height: 6px;
+  width: 50vmax;
 }
 #blockloading_progress {
   background-color: #ff0000;
   bottom: 0;
-  height: 12px;
+  height: 4px;
   margin: 1px;
   position: absolute;
   width: 0px;
