--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,15 @@ canvas {
   left: 0;
 }
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: default;
   position: absolute;
   text-align: justify ;
@@ -31,7 +37,7 @@ canvas {
   /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
   /* height: 4.0vmax; */
   width: 100%;
-  /* height: 40px; */
+  height: 70px;
 }
 /* .header div {
   display: inline-block;
@@ -40,20 +46,20 @@ canvas {
     margin: 0;
 }
 #header1 {
-  text-align: center ;
-  padding: 5px;
-  font-size: 30px;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 27px;
   margin: 0;
 }
 #header2 {
-  padding: 5px;
-  font-size: 20px;
+  padding-right: 10px;
+  font-size: 17px;
   margin: 0;
 }
 #header3 {
   text-align: center ;
   padding: 5px;
-  font-size: 50px;
+  font-size: 45px;
   margin: 0;
 }
 #textblock1 {
