--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ canvas {
   font-size: 15px;
   left: 0.0vmax;
   top: 0.0vmax;
-  background-color: rgba(1,158,229,.8);
+  background-color: rgba(30,144,255 ,0.8);
   color: white;
   padding: 0.0vmax;
   /* border-radius: 0.25em; */
