--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,3 +4,15 @@ src:  url('../fonts/Montserrat-Regular.ttf') format('truetype');
 font-weight: normal;
 font-style: normal;
 }
+/* @font-face {
+font-family: 'Montserrat';
+src:  url('../fonts/Montserrat-Bold.ttf') format('truetype');
+font-weight: bold;
+font-style: normal;
+} */
+@font-face {
+font-family: 'Montserrat';
+src:  url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
+font-weight: 900;
+font-style: normal;
+}
