--- a/css/buttons.css
+++ b/css/buttons.css
@@ -141,16 +141,25 @@
   cursor: pointer;
 }
 #btnModelsSelect1 {
-  background-image: url(../images/stoika.png);
-  height: 16.0vmax;
-  width: 8.0vmax;
-  display: none;
-}
-#btnModelsSelect2 {
+  bottom: 33.0vmax;
   background-image: url(../images/RoofTop1_perspec.png);
   height: 16.0vmax;
+  width: 8.0vmax;
+  /* display: none; */
+}
+#btnModelsSelect2 {
+  bottom: 17.0vmax;
+  background-image: url(../images/stoika.png);
+  height: 16.0vmax;
   width: 16.0vmax;
-  display: none;
+  /* display: none; */
+}
+#btnModelsSelect3 {
+  bottom: 1.0vmax;
+  background-image: url(../images/profil.png);
+  height: 16.0vmax;
+  width: 16.0vmax;
+  /* display: none; */
 }
 .modelsSelect:hover {
   opacity: 1.0;
