--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,43 @@ canvas {
   width: 35.0vmax;
   display: none;
 }
+#textblockUsadbaFloor1 {
+    display: none;
+}
+#textblockUsadbaFloor2 {
+    display: none;
+}
+.clUsadba {
+  cursor: default;
+  position: absolute;
+  text-align: left ;
+  font-size: 1.7vmin;
+  background-color: rgba(62,39,35 ,0.8);
+  color: white;
+  padding: 0.7vmax;
+    border-radius: 0.25em;
+  left: 0%;
+  top: 0%;
+}
+#textblockUsadba0 {
+  background-color: rgba(0,77,64 ,0.8)
+}
+#textblockUsadba1 {
+  background-color: rgba(13,71,161 ,0.8);
+}
+#textblockUsadba2 {
+  background-color: rgba(255,111,0 ,0.8);
+}
+#textblockUsadba4, #textblockUsadba14 {
+  background-color: rgba(136,14,79 ,0.8);
+}
+#textblockUsadba10, #textblockUsadba11, #textblockUsadba12 {
+  background-color: rgba(13,71,161 ,0.8);
+}
+#textblockUsadba15, #textblockUsadba16 {
+  background-color: rgba(25,118,210 ,0.8);
+}
+
 .hiddenP {
     display: none;
 }
