--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ canvas {
   top: 0%;
 }
 #textblockUsadba0 {
+  left: 100px;
+  top: 100px;
   background-color: rgba(0,77,64 ,0.8)
 }
 #textblockUsadba1 {
