--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ canvas {
   cursor: default;
   position: absolute;
   text-align: justify ;
-  font-size: 15px;
+  font-size: 4.5vmin;
   left: 0.0vmax;
   top: 0.0vmax;
   background-color: rgba(30,144,255 ,0.8);
@@ -39,18 +39,19 @@ canvas {
   /* text-shadow: 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white, 0px 0px 2px white; */
   /* height: 4.0vmax; */
   width: 100%;
-  height: 70px;
+  height: 6.7vmin;
 }
 /* .header div {
   display: inline-block;
 } */
 .header p {
-    margin: 0;
+  font-size: 1.0em;
+  margin: 0;
 }
 #header1 {
   text-align: left;
-  padding-left: 10px;
-  font-size: 27px;
+  padding-left: 1.0vmin;
+  font-size: 0.7em;
   margin: 0;
 }
 #WebGLInfo {
@@ -59,11 +60,11 @@ canvas {
   color: white;
   width: 40%;
   height: auto;
-  top: 80px;
-  left: 10px;
+  top: 7.7vmin;
+  left: 1.0vmin;
   text-align: left;
-  padding: 10px;
-  font-size: 20px;
+  padding: 1.0vmin;
+  font-size: 1.0em;
   border-radius: 0.25em;
   margin: 0px;
   display: none;
@@ -72,14 +73,12 @@ canvas {
 
 #header2 {
   text-align: right;
-  padding-right: 10px;
-  font-size: 15px;
+  padding-right: 1.0vmin;
+  font-size: 0.33em;
   margin: 0;
 }
 #header3 {
   text-align: center ;
-  padding: 5px;
-  font-size: 45px;
   margin: 0;
 }
 /* #textblock1 {
